--- a/index.css
+++ b/index.css
@@ -14,6 +14,9 @@ body {
   background-color: var(--bg-main-color);
 }
 
+/*
+  header section
+*/
 header {
   color: var(--accent-color);
   text-align: center;
@@ -48,4 +51,89 @@ header #header-btn-container .header-btn-item {
 
 header #header-btn-container .header-btn-item:last-child {
   margin-right: 0;
+}
+
+/*
+  main section
+*/
+main {
+  background-color: var(--document-bg-color);
+
+  height: 80%;
+  overflow-y: scroll;
+}
+
+main ul {
+  margin: 16px 24px;
+  overflow: hidden;
+}
+
+/*
+  main section common cards setting
+*/
+main ul .cards {
+  display: flex;
+  width: 100%;
+  min-height: 120px;
+  margin-bottom: 16px;
+
+  background: var(--component-bg-gradient);
+  box-shadow: 2px 2px 2px 2px var(--shadow-color);
+}
+
+main ul .cards .cards-info {
+  flex: 1;
+  padding: 16px;
+}
+
+main ul .cards .cards-info .title {
+  display: inline-block;
+  color: var(--text-accent-color);
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+
+main ul .cards .cards-info .description {
+  color: var(--smokywhite);
+  font-weight: 600;
+}
+
+main ul .cards .cards-delete {
+  display: flex;
+  align-items: center;
+}
+
+main ul .cards .cards-delete button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  color: var(--accent-color);
+  font-size: 20px;
+  font-weight: 700;
+}
+
+/*
+  main section image cards
+*/
+main ul .cards .cards-img-container {
+  width: 60%;
+  height: 240px;
+}
+main ul .cards .cards-img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/*
+  main section video cards
+*/
+main ul .cards .cards-iframe-container {
+  width: 60%;
+  height: 240px;
+}
+main ul .cards .cards-iframe-container iframe {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
