--- a/index.css
+++ b/index.css
@@ -43,14 +43,22 @@ header #header-btn-container .header-btn-item {
   width: 120px;
   height: 40px;
   margin-right: 8px;
-
-  color: white;
-  font-weight: 500;
   background-color: var(--accent-color);
 }
 
 header #header-btn-container .header-btn-item:last-child {
   margin-right: 0;
+}
+
+header #header-btn-container .header-btn-item .header-btn {
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
 /*
